fix contrast of Requests lsit items

--- a/src/components/MainPage/WorkshopsComponents/TableView/TableView.scss
+++ b/src/components/MainPage/WorkshopsComponents/TableView/TableView.scss
@@ -5,13 +5,13 @@
   flex-direction: row;
   justify-content: flex-start;
   width: calc(100% + 0px);
-  --shipped: #e3e7d6;
-  --priority: #f0dedc;
-  --completed: #d5ebda;
-  --ready: #c9e9d1;
+  --shipped: #d6e9c7;
+  --priority: #e6c8c4;
+  --completed: #c6ebcf;
+  --ready: #b8e9c4;
   --in-production: #e7f1ee;
-  --waiting: #d8e9e3;
-  --materials: #ebe3d4;
+  --waiting: #bce9d9;
+  --materials: #e7dbc3;
   --shipped-in-parts: #e9ddd6;
 
   .main-window {
